Move templates to app, add a first small stylesheet (fuchsia FTW!)

--- a/client/app/test.html
+++ b/client/app/test.html
@@ -24,7 +24,7 @@
 </form>
 
 <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<script src="js/app.js">
+<script src="../static/js/app.js">
 </script>
 </body>
 </html>
