--- a/client/app/bands/layout.html
+++ b/client/app/bands/layout.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Tunefish</title>
+    <link href="{{ url_for('static', filename='css/style.css') }}" type="text/css"  rel="stylesheet" />
 </head>
 <body>
     <div class="page">
