--- a/client/src/index.html
+++ b/client/src/index.html
@@ -74,8 +74,8 @@
                 <div class="col-xs-12 col-sm-8 col-md-6">
                     <div class="login-container">
                         <ul class="tabs">
-                            <li><a href="#" title="Login" class="active">Login</a></li>
-                            <li><a href="#" title="Registrieren">Registrieren</a></li>
+                            <li><a href="#login" title="Login" class="active">Login</a></li>
+                            <li><a href="#register" title="Registrieren">Registrieren</a></li>
                         </ul>
                         <div class="form-action-wrapper">
                             <div class="form-action">
@@ -125,6 +125,7 @@
     <!-- build:js app/js/vendor.min.js
 
     <!-- build:js app/js/app.min.js -->
+    <script src="js/lib/helpers.js"></script>
     <script src="js/app.js"></script>
     <!-- build:js app/js/app.min.js -->
 
