[NEW/UPDATE] begin implement html dummys to profile page + seperate header in file + add slick.js to layout.html + set debug output in helpers.js + comment in imgmin task in Gruntfile

--- a/client/src/profile.html
+++ b/client/src/profile.html
@@ -60,7 +60,7 @@
         <span>tunefish</span>
     </div>
     <div class="account">
-        <img src="img/ph_avatar.jpg" alt="$BANDNAME"/>
+        <img src="img/ph_avatar.png" alt="$BANDNAME"/>
         <span>The Greatest Great Catastrophe</span>
         <a class="logout" href="#"><i class="i-more"></i></a>
     </div>
