--- a/client/app/15tunefish/index.html
+++ b/client/app/15tunefish/index.html
@@ -4,6 +4,7 @@
     <title>tunefish @ angular</title>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="http://css-spinners.com/css/spinner/hexdots.css" type="text/css">
 
     <style type="text/css">
         .cart-item.ng-enter {
