Fix with of band image

--- a/client/app/15tunefish/band.html
+++ b/client/app/15tunefish/band.html
@@ -31,7 +31,7 @@
 
             </ul>
             <br />
-            <img src="http://tunefish.vorstrasse-bremen.de/{{band.image['poster']}}" alt="poster"/>
+            <img src="http://tunefish.vorstrasse-bremen.de/{{band.image['poster']}}" style="width: 100%" alt="poster"/>
         </div>
 
 	</div>
