do slider a bit bigger

--- a/client/app/15tunefish/bands.html
+++ b/client/app/15tunefish/bands.html
@@ -1,5 +1,5 @@
 <div ng-controller="BandsCtrl">
-    <div ng-hide="bands.length" class="hexdots-loader" style="margin: 200px;"></div>
+    <div ng-hide="bands.length" class="hexdots-loader" style="margin: 300px 300px 1000px;"></div>
 
     <div ng-show="bands.length">
         <input type="text" ng-model="search">
