--- a/client/app/15tunefish/bands.html
+++ b/client/app/15tunefish/bands.html
@@ -1,17 +1,25 @@
-<div ng-controller="BandsCtrl">
-    <div ng-hide="bands.length" class="hexdots-loader" style="margin: 300px 300px 1000px;"></div>
-
-    <div ng-show="bands.length">
-        <input type="text" ng-model="search">
-        <p ng-show="search">Du suchst gerade nach: {{search}}</p>
-
-        <div ng-repeat="band in bands | filter:search">
-            <div style="width: 200px; height: 200px; margin: 10px; float: left; background-image: url('http://tunefish.vorstrasse-bremen.de/{{band.image['thumb']}}');">
-                <a href="#/band/{{band.id}}" style="color: #fff; text-align: center; bottom: 5px;">{{band.artist}}</a>
-            </div>
+    <div ng-controller="BandsCtrl">
+    <div ng-hide="bands.length">
+        <div class="hexdots-loader" style="margin: 300px 300px 1000px;">
+            <h3>tunefish lädt ...</h3>
         </div>
     </div>
 
-    <div class="clearfix"></div>
+    <div ng-show="bands.length">
+        <div ng-repeat="band in bands | filter:search">
+            <div class="band-grid">
+                <a href="#/band/{{band.id}}" class="band-tile">
+                    <div class="band-tile-content">
+                        <i ng-class="{'i-done band-voted': band.rating > 0}"></i>
+                        <img class="band-tile-img" src="http://tunefish.vorstrasse-bremen.de/{{band.image['thumb']}}" alt="{{band.artist}}"/>
+                        <div class="band-tile-desc">
+                         {{band.artist}}
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="band-grid-gap"></div>
 
+    </div>
 </div>
