--- a/client/app/15tunefish/band.html
+++ b/client/app/15tunefish/band.html
@@ -10,12 +10,7 @@
                 <div class="col-xs-6 col-sm-5">
                     <h2>{{ band.artist }}</h2>
                     <br />
-
-                    <i class="glyphicon glyphicon-star"></i>
-                    <i class="glyphicon glyphicon-star"></i>
-                    <i class="glyphicon glyphicon-star-empty"></i>
-                    <i class="glyphicon glyphicon-star-empty"></i>
-                    <i class="glyphicon glyphicon-star-empty"></i>
+                    <voting band="band"></voting>
                 </div>
             </div>
 
