Add some headers for making the site responsive

--- a/client/app/15tunefish/index.html
+++ b/client/app/15tunefish/index.html
@@ -1,6 +1,9 @@
 <html ng-app="tunefishApp">
 <head>
-    <meta charset="utf8"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>tunefish @ angular</title>
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
