--- a/client/app/15tunefish/bands.html
+++ b/client/app/15tunefish/bands.html
@@ -1,8 +1,16 @@
     <div ng-controller="BandsCtrl">
     <div ng-hide="bands.length">
-        <div class="hexdots-loader" style="margin: 300px 300px 1000px;">
-            <h3>tunefish lädt ...</h3>
+        <div class="spinner">
+          <div class="rect1"></div>
+          <div class="rect2"></div>
+          <div class="rect3"></div>
+          <div class="rect4"></div>
+          <div class="rect5"></div>
+            <br />
+                <h3>lädt ...</h3>
         </div>
+
+
     </div>
 
     <div ng-show="bands.length">
