--- a/client/app/15tunefish/playlist.html
+++ b/client/app/15tunefish/playlist.html
@@ -1,4 +1,4 @@
-<div ng-controller="JWTCheckCtrl">
+<div>
     <button class="btn btn-default pull-right" clear-playlist ng-show="playlist.length">Leeren</button>
     <h2>Wiedergabeliste</h2>
 
