--- a/client/app/15tunefish/bands.html
+++ b/client/app/15tunefish/bands.html
@@ -14,7 +14,7 @@
     </div>
 
     <div ng-show="bands.length">
-        <h2>Die Bands <small>Filter: <span ng-show="search.length">"{{ search }}"</span> {{ minRating }}-{{ maxRating }} Sterne <a ng-click="allToPlaylist(filteredBands)" class="btn btn-default pull-right">Alle zur Playlist</a></small></h2>
+        <h2>Die {{(bands|filter:search|ownRating:minRating:maxRating).length}} Bands <small>Filter: <span ng-show="search.length">"{{ search }}"</span> {{ minRating }}-{{ maxRating }} Sterne <a ng-click="allToPlaylist(filteredBands)" class="btn btn-default pull-right">Alle zur Playlist</a></small></h2>
         <div ng-repeat="band in (filteredBands = (bands|filter:search|ownRating:minRating:maxRating))">
             <div class="band-grid">
                 <a href="#/band/{{band.id}}" class="band-tile">
