Some small changes for https

--- a/client/app/15tunefish/band.html
+++ b/client/app/15tunefish/band.html
@@ -12,7 +12,7 @@
         <div ng-hide="loading">
             <div class="row">
                 <div class="col-xs-5 col-md-3 col-sm-4">
-                    <img class="bandimg" src="http://tunefish.vorstrasse-bremen.de/{{band.image['thumb']}}" alt="poster" />
+                    <img class="bandimg" src="{{band.image['thumb']}}" alt="poster" />
                 </div>
 
                 <div class="col-xs-6 col-sm-5">
