Fix issue with http

--- a/client/app/15tunefish/band.html
+++ b/client/app/15tunefish/band.html
@@ -63,7 +63,7 @@
             <br /><br />
             <h4>Bandfoto</h4>
 
-            <img src="http://tunefish.vorstrasse-bremen.de/{{band.image['poster']}}" style="width: 100%" alt="poster"/>
+            <img src="{{band.image['poster']}}" style="width: 100%" alt="poster"/>
         </div>
 
 	</div>
