--- a/client/app/15tunefish/bands.html
+++ b/client/app/15tunefish/bands.html
@@ -14,7 +14,19 @@
     </div>
 
     <div ng-show="bands.length">
-        <h2>Die {{(bands|filter:search|ownRating:minRating:maxRating).length}} Bands <small>Filter: <span ng-show="search.length">"{{ search }}"</span> {{ minRating }}-{{ maxRating }} Sterne <a ng-click="allToPlaylist(filteredBands)" class="btn btn-default pull-right">Alle zur Playlist</a></small></h2>
+        <h2>Die {{(bands|filter:search|ownRating:minRating:maxRating).length}} Bands <small>Filter: <span ng-show="search.length">"{{ search }}", </span>
+            <select ng-model="minRating" ng-options="rating for rating in ratings"></select>
+            -
+            <select ng-model="maxRating" ng-options="rating for rating in ratings"></select> Sterne
+            <a ng-click="allToPlaylist(filteredBands)" class="btn btn-default pull-right">Alle zur Playlist</a></small></h2>
+
+        <div class="progress">
+            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 5em; width: {{(bands|ownRating:0:0).length/bands.length*100}}%">
+                {{(bands|ownRating:1:5).length}}/{{bands.length}}
+            </div>
+        </div>
+
+
         <div ng-repeat="band in (filteredBands = (bands|filter:search|ownRating:minRating:maxRating))">
             <div class="band-grid">
                 <a href="#/band/{{band.id}}" class="band-tile">
